<resources>
    <string name="app_name">FluentSpeak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_fragment">Topics</string>
    <string name="second_fragment">Speak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="page_title">FluencySpeak</string>

    <string name="item_settings">Settings</string>
    <string name="item_change_conversation">Change conversation</string>
    <string name="item_view_cost">View cost</string>

    <string name="max_tokens_hint">Max tokens</string>

    <string name="username_hint">Username</string>
    <string name="utterances_at_beginning_hint">Utterances at beginning</string>
    <string name="last_messages_hint">Last messages</string>

    <string name="presence_penalty_hint">Presence penalty</string>

    <string name="frecuency_penalty_hint">Frecuency penalty</string>


    <string name="preference_file_key">preference_file_key</string>

    <string name="whisper_temperature_key">whisper_temperature_key</string>

    <string name="chat_gpt_temperature_key">chat_gpt_temperature_key</string>
    <string name="chat_gpt_max_tokens_key">chat_gpt_max_tokens_key</string>
    <string name="chat_gpt_presence_penalty_key">chat_gpt_presence_penalty_key</string>
    <string name="chat_gpt_frecuency_penalty_key">chat_gpt_frecuency_penalty_key</string>

    <string name="text_to_speech_accent_key">text_to_speech_accent_key</string>
    <string name="text_to_speech_gender_key">text_to_speech_gender_key</string>
    <string name="text_to_speech_voice_name_key">text_to_speech_voice_name_key</string>

    <string name="username_key">username_key</string>
    <string name="utterances_at_beginning_key">utterances_at_beginning_key</string>
    <string name="last_messages_key">last_messages_key</string>

    <string name="first_start_key">first_start_key</string>

    <string name="text_to_speech_accent_default_value">en-AU</string>
    <string name="text_to_speech_gender_default_value">FEMALE</string>
    <string name="text_to_speech_voice_name_default_value">en-AU-Neural2-A</string>

    <string name="username_default_value">Orlando</string>

    <string name="chat_gpt_max_tokens_error">It can\'t be empty</string>
    <string name="text_to_speech_voice_name_error">It can\'t be empty</string>

    <string name="username_error">It can\'t be empty</string>
    <string name="utterances_at_beginning_error">It can\'t be empty</string>
    <string name="last_messages_error">It can\'t be empty</string>

    <string name="whisper_temperature_hint">The sampling temperature, between 0 and 1. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. If set to 0, the model will use log probability to automatically increase the temperature until certain thresholds are hit.</string>

    <string name="chat_gpt_temperature_hint">What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.\n\nWe generally recommend altering this or top_p but not both.</string>
    <string name="chat_gpt_max_tokens_hint">The maximum number of tokens to generate in the chat completion.\n\nThe total length of input tokens and generated tokens is limited by the model\'s context length.</string>
    <string name="chat_gpt_presence_penalty_hint">Number between -2.0 and 2.0. Positive values penalize new tokens based on whether they appear in the text so far, increasing the model\'s likelihood to talk about new topics.</string>
    <string name="chat_gpt_frecuency_penalty_hint">Number between -2.0 and 2.0. Positive values penalize new tokens based on their existing frequency in the text so far, decreasing the model\'s likelihood to repeat the same line verbatim.</string>

    <string name="text_to_speech_accent_hint">AU means Australian\nIN means Indian\nGB means Great Britain</string>
    <string name="text_to_speech_gender_hint">Male voice or Female voice</string>
    <string name="text_to_speech_voice_name_hint">The voice name that match with the accent and gender previously selected</string>

    <string name="conversation_settings_username_hint">The username to be used in the conversation</string>
    <string name="conversation_settings_utterances_at_beginning_hint">The utterances at the beginning of the conversation</string>
    <string name="conversation_settings_last_messages_hint">The last messages to take for the conversation</string>

    <string name="save_preferences_successful_message">The preferences have been saved</string>
    <string name="save_preferences_failed_message">You have left an empty field</string>

    <!-- Colors for names of speakers -->

    <string name="first_color">#335C67</string>
    <string name="second_color">#FFF3B0</string>
    <string name="third_color">#E09F3E</string>
    <string name="fourth_color">#9E2A2B</string>
    <string name="fifth_color">#540B0E</string>
</resources>