...
                android:layout_marginTop="24dp"
                android:src="@drawable/baseline_help_outline_24"
                app:layout_constraintStart_toEndOf="@+id/whisper_temperature"
                app:layout_constraintTop_toBottomOf="@+id/whisper" />

            <com.google.android.material.slider.Slider
                android:id="@+id/whisper_temperature_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:valueFrom="0.0"
...
                android:layout_marginTop="24dp"
                android:src="@drawable/baseline_help_outline_24"
                app:layout_constraintStart_toEndOf="@+id/chat_gpt_temperature"
                app:layout_constraintTop_toBottomOf="@+id/chat_gpt" />

            <com.google.android.material.slider.Slider
                android:id="@+id/chat_gpt_temperature_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:valueFrom="0.0"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chat_gpt_max_tokens">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chat_gpt_max_tokens_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_marginTop="24dp"
                android:src="@drawable/baseline_help_outline_24"
                app:layout_constraintStart_toEndOf="@id/chat_gpt_presence_penalty"
                app:layout_constraintTop_toBottomOf="@+id/chat_gpt_max_tokens_field" />

            <com.google.android.material.slider.Slider
                android:id="@+id/chat_gpt_presence_penalty_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:valueFrom="-2.0"
...
                android:layout_marginTop="24dp"
                android:src="@drawable/baseline_help_outline_24"
                app:layout_constraintStart_toEndOf="@id/chat_gpt_frecuency_penalty"
                app:layout_constraintTop_toBottomOf="@+id/chat_gpt_presence_penalty_slider" />

            <com.google.android.material.slider.Slider
                android:id="@+id/chat_gpt_frecuency_penalty_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:valueFrom="-2.0"
...
                android:id="@+id/text_to_speech_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Gender"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/text_to_speech_gender_field"
                app:layout_constraintTop_toBottomOf="@+id/text_to_speech" />

            <ImageView
                android:id="@+id/text_to_speech_gender_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginTop="24dp"
                android:src="@drawable/baseline_help_outline_24"
                app:layout_constraintStart_toEndOf="@+id/text_to_speech_gender"
                app:layout_constraintTop_toBottomOf="@+id/text_to_speech" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_to_speech_accent_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
...
                android:layout_marginTop="24dp"
                android:src="@drawable/baseline_help_outline_24"
                app:layout_constraintStart_toEndOf="@id/text_to_speech_voice_name"
                app:layout_constraintTop_toBottomOf="@+id/text_to_speech_accent_field" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_to_speech_voice_name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
...
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
...
